--- a/client/src/pages/Highscores/Highscores.css
+++ b/client/src/pages/Highscores/Highscores.css
@@ -1,6 +1,6 @@
 body {
     height: 100%;
-    background-image: url("./Assets/Link_vs_Mario.gif");
+    /* background-image: url("./Assets/Link_vs_Mario.gif"); */
     background-color: #cccccc;
     background-position: center;
     background-repeat: no-repeat;
