--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -8,6 +8,7 @@
   text-align: center;
   font-size: medium;
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  color: white;
 }
 
 .creators {
