--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,3 +46,8 @@
 .fas fa-gamepad {
   padding-left: 5px;
 }
+
+#main-container.content-wrapper {
+  min-height: calc(100vh - 146px);
+  margin-top: 100px;
+}
