--- a/client/src/pages/Highscores/Highscores.css
+++ b/client/src/pages/Highscores/Highscores.css
@@ -7,30 +7,36 @@ body {
     background-size: cover;
    }
 
-   /* .card {
-       margin-top: 1em;
-   } */
+.card {
+       height: 65%;
+       font-size: 2.5rem; 
+       width: fit-content;
+       display: block; 
+   } 
 
    
 
 li {
     list-style: none;
-    /* font-size: .5em;
-    line-height: 2em; */
-}
+    line-height: 1.5em;
+    font-size: inherit;
+} 
 
 header {
     font-size: 2.5rem;
     color: rgb(3, 99, 209);
-    display: 'inline-block';
+    /* display: 'inline-block'; */
     font-style: oblique;
     text-align: center;
     text-decoration: underline;
+    margin-bottom: .8em;
 }
 
 div {
+    
     font-style: italic;
     text-align: center;
+    margin-left: 4px;
 }
 
 .player1 {
