--- a/client/src/pages/Highscores/Highscores.css
+++ b/client/src/pages/Highscores/Highscores.css
@@ -11,7 +11,7 @@ body {
        font-size: 1rem; 
        width: fit-content;
        display: block; 
-       padding: 30px;
+       /* padding: 30px; */
    } 
 
    
